--- a/styels/styel.css
+++ b/styels/styel.css
@@ -141,35 +141,35 @@ hr {
 
     .players,
     .blogs,
-    .course {
+    .courses {
         grid-template-columns: repeat(1, 1fr);
-
     }
 
     .player,
-    .blog {
+    .blog,
+    .course {
         flex-direction: column;
     }
 
 }
 
 /* tablet devices */
-@media only screen and (max-width:688px) and (max-width:992px) {
+@media only screen and (min-width:688px) and (max-width:992px) {
     .container {
         width: 100%;
     }
 
     .players,
-    .courses {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
+    .courses,
     .blogs {
         grid-template-columns: repeat(2, 1fr);
     }
-
-
-
-
-
 }
+
+
+
+
+
+
+
+
